# slurm-banking-plugins

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.html  README.md  README.org  README.txt  SLURM_INTERFACE.md  bank-config.toml  bank-config.toml.example  build.rs  plugstack.conf  prices.toml  shell.nix  slurm-banking-plugins.spec  wrapper.h
.github/workflows/: centos6.yml  centos7.yml  ci.yml
docker/: build  dev  docker-compose.yml
docker/centos6/: CentOS-Base.repo  Dockerfile
docker/centos6-dev/: Dockerfile
docker/centos7/: Dockerfile
docker/dev/: Dockerfile
job_completion_plugin/: Cargo.toml  Makefile
job_completion_plugin/src/: jobcomp_bank.rs
job_submit_plugin/: Cargo.toml  Makefile
job_submit_plugin/src/: job_submit_bank.rs
jobscripts/: README.md  job.sh  slow-job.sh
mybrc_rest_client/: Cargo.toml  README.md
mybrc_rest_client/docs/: Account.md  AccountsApi.md  ApiTokenAuthApi.md  CanSubmitJobApi.md  Cpu.md  CpusApi.md  InlineResponse200.md  InlineResponse2001.md  InlineResponse2002.md  InlineResponse2003.md  InlineResponse400.md  Job.md  JobCreate.md  JobUpdate.md  JobsApi.md  Node.md  Partition.md  PartitionsApi.md  ScgUser.md  UploadCpuDataApi.md  User.md  UserAccount.md  UseraccountassociationsApi.md  UsersApi.md
mybrc_rest_client/src/: lib.rs
mybrc_rest_client/src/apis/: accounts_api.rs  api_token_auth_api.rs  can_submit_job_api.rs  client.rs  configuration.rs  cpus_api.rs  jobs_api.rs  mod.rs  partitions_api.rs  upload_cpu_data_api.rs  useraccountassociations_api.rs  users_api.rs
mybrc_rest_client/src/models/: account.rs  cpu.rs  inline_response_200.rs  inline_response_200_1.rs  inline_response_200_2.rs  inline_response_200_3.rs  inline_response_400.rs  job.rs  job_create.rs  job_update.rs  mod.rs  node.rs  partition.rs  scg_user.rs  user.rs  user_account.rs
scripts/: build-with-docker.sh
scripts/clang/: build-clang.sh  clang-env.sh
scripts/sacct/: jobs2rest.py  load-jobs-today-rest.sh  requirements.txt  rest-daily.sh  rest_config.py.example
slurm_banking/: Cargo.toml  build.rs  wrapper.h
slurm_banking/src/: accounting.rs  lib.rs  logging.rs  prices_config.rs  range_format.rs  safe_helpers.rs
spank_plugin/: Cargo.toml  Makefile
spank_plugin/src/: spank_plugin_bank.rs
spec/: swagger.json
src/: accounting.rs  job_submit_bank.rs  jobcomp_bank.rs  logging.rs  safe_helpers.rs
