[package]
name = "slurm-banking-plugins"
version = "0.1.0"
authors = ["Nicolas Chan <nicolaschan@berkeley.edu>"]
edition = "2018"

[lib]
name = "job_submit_bank"
path = "src/job_submit_bank.rs"
crate-type = ["cdylib"]

[dependencies]
config = "0.9"
reqwest = "0.9.16"

[build-dependencies]
bindgen = "0.49.0"