[package]
name = "slurm-banking-plugins"
version = "0.1.0"
authors = ["Nicolas Chan <nicolaschan@berkeley.edu>"]
edition = "2018"

[lib]
name = "job_submit_bank"
path = "src/job_submit_bank.rs"
crate-type = ["cdylib"]

[dependencies]
config = "0.9"
lazy_static = "1.3.0"
rust_decimal = "1.0.1"

[dependencies.reqwest]
version = "0.9.16"
default-features = false
features = ["rustls-tls"]

[build-dependencies]
bindgen = "0.49.0"