[package]
name = "slurm_banking_job_submit_plugin"
version = "0.1.0"
authors = ["Nicolas Chan <nicolaschan@berkeley.edu>"]
edition = "2018"

[lib]
name = "job_submit_bank"
path = "src/job_submit_bank.rs"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
config = "0.9"
lazy_static = "1.3.0"
rust_decimal = "1.0.1"
slurm_banking = { path = "../slurm_banking" }
openapi = { path = "../mybrc_rest_client" }

[profile.dev]
opt-level = 0
debug = true
