[package]
name = "slurm_banking"
version = "0.1.0"
authors = ["Nicolas Chan <nicolas@nicolaschan.com>"]
edition = "2018"

[dependencies]
config = "0.9"
futures = "0.1.16"
hyper = "0.11.6"
rust_decimal = "1.0.1"
swagger = { path = "../mybrc_rest_client" }
tokio-core = "0.1.17"

[build-dependencies]
bindgen = "0.49.0"