[package]
name = "slurm_banking_spank_plugin"
version = "0.1.0"
authors = ["Nicolas Chan <nicolaschan@berkeley.edu>"]
edition = "2018"

[lib]
name = "spank_plugin_bank"
path = "src/spank_plugin_bank.rs"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4"
config = "0.9"
lazy_static = "1.3.0"
rust_decimal = "1.0.1"
slurm_banking = { path = "../slurm_banking" }